[package]
name = "collector"
version = "0.1.0"
edition = "2021"

[dependencies]
serpapi-search-rust="0.1.1"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_derive = "1.0.203"
reqwest = { version = "0.11", features = ["socks", "rustls-tls","json"] }
select = "0.6.0"
futures = "0.3.30"
anyhow = "1.0.86"
